fix: Use SQLite for production deployment on Render
- Change production database adapter from PostgreSQL to SQLite
- Simplifies deployment on free tier hosting
- Suitable for read-heavy applications with low write concurrency
- Avoids need for pg gem and PostgreSQL database provisioning

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,11 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: <%= ENV['DATABASE_URL'] ? nil : 'well_intervention_production' %>
-  username: <%= ENV['DATABASE_USERNAME'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: <%= ENV['DATABASE_HOST'] %>
-  url: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  database: db/production.sqlite3
